[gd_scene load_steps=2 format=3 uid="uid://cfwk45t0p1omu"]

[ext_resource type="Script" path="res://editor/invalid_level_load_window.gd" id="1_l1mht"]

[node name="InvalidLevelLoad" type="Window"]
mode = 3
title = "Invalid level"
position = Vector2i(0, 36)
size = Vector2i(477, 265)
transient = true
exclusive = true
popup_window = true
script = ExtResource("1_l1mht")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="Container" type="PanelContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/Container/VBoxContainer"]
layout_mode = 2
text = "This level is considered \"invalid\"."
autowrap_mode = 3

[node name="Fixable" type="Label" parent="ScrollContainer/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "It has the following fixable problems:"
autowrap_mode = 3

[node name="FixableList" type="Label" parent="ScrollContainer/Container/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 0, 1)
layout_mode = 2
text = " • Problems"
autowrap_mode = 3

[node name="Unfixable" type="Label" parent="ScrollContainer/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "And the following unfixable problems:"
autowrap_mode = 3

[node name="UnfixableList" type="Label" parent="ScrollContainer/Container/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = " • Problems"
autowrap_mode = 3

[node name="Explanation" type="Label" parent="ScrollContainer/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Some people make invalid levels on purpose, and the fixable problems are part of their design.
You can try loading the level as-is, or automatically fix the fixable problems (the unfixable problems will remain as they can't be fixed algorithmically).
"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="LoadUnfixed" type="Button" parent="ScrollContainer/Container/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Load Unfixed"

[node name="LoadFixed" type="Button" parent="ScrollContainer/Container/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Load Fixed"

[node name="Cancel" type="Button" parent="ScrollContainer/Container/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Cancel"
